--- a/courses.ini
+++ b/courses.ini
@@ -4,8 +4,10 @@ module = wsgi
 master = true
 processes = 5
 
-socket = courses.sock
+socket = /home/putz/Projects/course-recommendations/courses.sock
 chmod-socket = 660
 vacuum = true
-
+plugins = python3
+uid = www-data
+gid = www-data
 die-on-term = true
